[gd_scene load_steps=9 format=3 uid="uid://brvla8l7lphvg"]

[ext_resource type="Script" path="res://src/player.gd" id="1_nok4e"]
[ext_resource type="Texture2D" uid="uid://b0ul0p6spa5kw" path="res://sprites/runner.png" id="2_yy6vk"]
[ext_resource type="PackedScene" uid="uid://0p1rk8ig07os" path="res://src/demon_tongue.tscn" id="3_qta7u"]
[ext_resource type="Script" path="res://src/hud.gd" id="4_rb8ji"]
[ext_resource type="Texture2D" uid="uid://bure181a2qul8" path="res://sprites/staminabar.png" id="5_gyhn1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pmav3"]
radius = 0.3

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hnf36"]
properties/0/path = NodePath(".:demon")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:_player_info")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:sync_position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:sync_rotation")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_qs1ue"]
size = Vector3(0.5, 0.5, 0.5)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_nok4e")

[node name="Sprite3D" type="Sprite3D" parent="."]
pixel_size = 0.04
billboard = 2
shaded = true
texture_filter = 0
texture = ExtResource("2_yy6vk")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00333649, -0.00330316, 0.000716925)
shape = SubResource("SphereShape3D_pmav3")

[node name="Head" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Torchlight" type="SpotLight3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, 0, 0)
spot_angle = 20.0

[node name="DemonTongue" parent="Head" instance=ExtResource("3_qta7u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
visible = false

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hnf36")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
sorting_offset = 1.0
billboard = 2
text = "Name"

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("BoxShape3D_qs1ue")

[node name="ImmuneTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HUD" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_rb8ji")
player_node = NodePath("..")

[node name="MessageBox" type="RichTextLabel" parent="HUD"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Welcome to OniGokko3D
"
scroll_following = true

[node name="EnergyBar" type="TextureProgressBar" parent="HUD"]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
fill_mode = 6
nine_patch_stretch = true
texture_progress = ExtResource("5_gyhn1")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="ImmuneTimer" to="." method="_on_immune_timer_timeout"]
